# lunch-menu

./: .gitignore  App.py  README.md  pyproject.toml
note/: crud.ipynb  endpoints.ipynb  kwargs.ipynb  lunch_menu.ipynb  melt.ipynb  random.ipynb
pages/: 1_Input.py  2_chart.py  3_Insert.py  4_Best.py  5_age_cal.py  6_sync.py  9_old.py  page2.py
src/lunch_menu/: constants.py  db.py
